# CLIforAPI

./: CLAUDE.md  README.md  pyproject.toml
skills/: CLIFORAPI.md
src/cliforapi/: CLIFORAPI.md  __init__.py  auth.py  cli.py  client.py  config.py  matcher.py  output.py  resolver.py  spec.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_matcher.py  test_output.py  test_resolver.py  test_spec.py
